fix the overlap delay by adding the z-index to overlay

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ button {
   left: 0;
   right: 0;
   border-radius: 5px;
+  z-index:1;
 }
 
 .title {
